feat: added time to pairs in competition list
