# server/controllers/competition.controller.ts
@@ -339,7 +339,6 @@ export const addNewParticipant = async (
   if (!user) return res.status(404).send({ error: "user wasn't found" });
 
   if (competition && user) {
-    user.competition = competition;
     user.save();
 
     competition.participants = [...competition.participants, user];
@@ -674,6 +673,7 @@ export const getCompetitionParticipants = async (
   const competition = await Competition.findOne({ _id: id }).populate(
     'participants'
   );
+  console.log('competition', competition);
 
   if (!competition)
     return res.status(404).send({ error: "Competition wasn't found" });
